[package]
name = "udp-experiment"
authors = ["Kirill Taran <kirill.t256@gmail.com>"]
version = "0.1.1"
edition = "2018"

[[bin]]
name = "collect"
path = "src/collect.rs"

[[bin]]
name = "stress"
path = "src/stress.rs"

[dependencies]
clap = "3.0.0-beta.1"
tokio-threadpool = "0.1"
tokio-codec = "0.1"
tokio = "0.1"
futures = "0.1"
bytes = "0.4.10"
num = "0.2"